@@ -585,3 +585,14 @@ Changes to be committed:
 	new file:   "ZGame/Doc/\346\270\270\346\210\217\347\250\213\345\272\217\345\221\230\345\205\273\346\210\220\350\256\241\345\210\222.txt"
 	new file:   ZGame/T.ZGame.cs
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+Game_D.2015/05/07.13_37_16.73.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   History.txt
+	modified:   ZGame/T.ZGame.cs
+
